--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
     </div>
 
-    <!-- <script src="login.js"></script> -->
-    <script src="login2.js"></script>
+  
+    <script src="script.js"></script>
 </body>
 
 </html>
